admission/ValidatingAdmissionPolicy/policies/windows-hostprocess/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: windows-hostprocess-pod
  annotations:
    kubeapt.io/uuid: "042cc512-57cb-4fcb-8936-d302caf7012a"
spec:
  hostNetwork: true
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    windowsOptions:
      hostProcess: true
  os:
    name: windows
